# fzt-picker

./: .gitignore  CLAUDE.md  LICENSE
.github/workflows/: build.yml  dispatch.yml  image.yml  release.yml
frontend/: go.mod  go.sum  main.go
frontend/cgo/: picker.go
frontend/picker/: config.go  items.go  provider.go
windows/: Cargo.toml
windows/hook/: Cargo.toml
windows/hook/src/: bridge.rs  hook.rs  lib.rs  walker.rs
windows/hook/src/proxy/: mod.rs  open.rs  state.rs
windows/injector/: Cargo.toml  build.rs
windows/injector/src/: main.rs
windows/test-trigger/: Cargo.toml
windows/test-trigger/src/: main.rs
