[package]
name = "fzt-picker-injector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fzt-picker"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
] }
